# otelcontext

./: .air.toml  .bestpractices.json  .env.example  .gitignore  .gitleaks.toml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go  memlimit.go  memlimit_test.go  pprof.go  pprof_test.go  pyproject.toml  requirements.txt  start_dev.ps1
.claude/: settings.local.json
.github/: ci.yml  dependabot.yml
.github/workflows/: beta.yml  ci.yml  release.yml  scorecard.yml  security.yml
docs/: IMPLEMENTATION_PLAN.md  OPERATIONS.md  PROJECT_SPEC.md
docs/review/: 2026-04-27-7pr-robustness-review.md  2026-04-28-second-opinion-review.md
internal/ai/: service.go
internal/api/: admin_handlers.go  compress.go  compress_test.go  dbhealth.go  dbhealth_test.go  etag.go  etag_cache_test.go  graph_handler.go  health_handlers.go  log_handlers.go  log_handlers_cap_test.go  log_handlers_trace_filter_test.go  metrics_handlers.go  middleware.go  middleware_test.go  ratelimit.go  ratelimit_otlp_test.go  server.go  service_map_cache_test.go  similar_handler.go  similar_handler_test.go  tenant_middleware.go  tenant_middleware_sanitize_test.go  (+1 more)
scripts/: release.sh  setup-git-signed.sh
src/: config.py  main.py
test/: run_simulation.ps1  run_simulation.sh
tests/: test_api.py  test_dlq.py  test_graphrag.py  test_ringbuffer.py  test_vectordb.py
ui/: budgets.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
web/: package-lock.json  package.json
(+345 files in other folders)
